@@ -6,7 +6,7 @@ The <b>Open Data Protocol</b> (OData) is a fantastic way to query and update dat
 
 * Source Code (hosted on GitHub): http://github.com/visoft/ruby_odata 
 * Documentation (hosted on rdoc.info): http://rdoc.info/projects/visoft/ruby_odata 
-* Issue tracking (hosted on Lighthouse): http://visoft.lighthouseapp.com/projects/54309/home 
+* Issue tracking (hosted on GitHub): https://github.com/visoft/ruby_odata/issues
 * Wiki (hosted on GitHub): http://wiki.github.com/visoft/ruby_odata/
 * Gem (hosted on Gemcutter): http://gemcutter.org/gems/ruby_odata
 * Blog articles: {Introducing a Ruby OData Client Library}[http://bit.ly/IntroRubyOData]
@@ -16,6 +16,13 @@ You can install ruby_odata as a gem using:
   gem install ruby_odata
 
 == Usage
+
+=== Instantiating the Service
+There are various options that you can pass when creating an instance of the service, these include:
+* username: username for http basic auth
+* password: password for http basic auth
+* verify_ssl: false if no verification, otherwise mode (OpenSSL::SSL::VERIFY_PEER is default)
+* additional_params: a hash of query string params that will be passed on all calls (query, new, update, delete, batch)
 
 === Adding
 When you point at a service, an AddTo<EntityName> method is created for you.  This method takes in the new entity to create.  To commit the change, you need to call the save_changes method on the service.  To add a new category for example, you would simply do the following:
